upgrade to redis 7.2.2

--- a/etc/aa/redis.conf
+++ b/etc/aa/redis.conf
@@ -31,3 +31,5 @@ stop-writes-on-bgsave-error yes
 # RDB files created with checksum disabled have a checksum of zero that will  
 # tell the loading code to skip the check. 
 rdbchecksum no
+
+#loadmodule /usr/lib64/redisbloom.so
